--- a/web/src/main.css
+++ b/web/src/main.css
@@ -11,6 +11,24 @@ body {
 #root {
   @apply flex flex-col min-h-screen;
 }
+::-webkit-scrollbar {
+  @apply hidden;
+}
+::-webkit-scrollbar-button {
+  @apply hidden;
+}
+::-webkit-scrollbar-track {
+  @apply hidden;
+}
+::-webkit-scrollbar-track-piece {
+  @apply hidden;
+}
+::-webkit-scrollbar-thumb {
+  @apply hidden;
+}
+::-webkit-scrollbar-corner {
+  @apply hidden;
+}
 .slide-in-bottom {
   -webkit-animation: slide-in-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
     both;
