--- a/web/src/main.css
+++ b/web/src/main.css
@@ -6,7 +6,7 @@ body {
   @apply bg-center bg-cover select-none overflow-hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-image: url("./wallpaper/wallpaper5.jpg");
+  background-image: url("./wallpaper/wallpaper.jpg");
 }
 #root {
   @apply flex flex-col min-h-screen;
