--- a/web/src/main.css
+++ b/web/src/main.css
@@ -3,10 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply bg-center bg-cover select-none overflow-hidden;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-image: url("./wallpaper/wallpaper.jpg");
+  @apply bg-center bg-cover select-none overflow-hidden bg-[url('./wallpaper/wallpaper.jpg')] font-default;
 }
 #root {
   @apply flex flex-col min-h-screen;
