feat: app recently added, refactor: ui, startmenu, calendar, colors

--- a/web/src/main.css
+++ b/web/src/main.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply bg-center bg-cover select-none overflow-hidden bg-[url('./images/wallpaper.jpg')] font-default;
+  @apply bg-center bg-cover select-none overflow-hidden bg-[url('./images/wallpaper6.jpg')] font-default;
 }
 #root {
   @apply flex flex-col min-h-screen;
